tests/ui/issues/issue-49919.stderr
error[E0582]: binding for associated type `Output` references lifetime `'c`, which does not appear in the trait input types
  --> $DIR/issue-49919.rs:2:39
   |
LL |     let foo: Box<dyn for <'c> Fn() -> &'c T> = Box::new(move || &t);
   |                                       ^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0582`.
